# hs-nummy

./: README.md  hs-nummy.cabal  stack.yaml
exe/: Main.hs  Repl.hs
exe/Application/: Arguments.hs  Base.hs  Parser.hs  Repl.hs
exe/Application/Repl/: Commands.hs  Input.hs  Output.hs  Parser.hs
exe/Main/: Repl.hs
lib/Nummy/: Base.hs  Cache.hs  Currency.hs  Metrology.hs  Parser.hs  Prelude.hs
lib/Nummy/Currency/: Base.hs  Request.hs
lib/Nummy/Metrology/: Base.hs  Currency.hs  Definitions.hs  Dimension.hs  Prefix.hs  Quantity.hs  Show.hs  Unit.hs
lib/Nummy/Metrology/Definitions/: Dimension.hs  Prefix.hs  Tables.hs  Unit.hs
lib/Nummy/Parser/: Base.hs  Command.hs  Definitions.hs  Expr.hs  Physical.hs  Unit.hs  Units.hs
test/: Main.hs  Tests.hs
test/Tests/: Definitions.hs  Dimensions.hs  Expressions.hs  Parser.hs  Quantities.hs  Units.hs
