cabal-version: 2.2
name:          hs-nummy
version:       0.4

common common-options
  default-language:   Haskell2010
  default-extensions: NoImplicitPrelude, OverloadedStrings
  ghc-options:        -Wall
                      -Wtype-defaults
                      -fwrite-ide-info
                      -hiedir=.hie
  build-depends:      base

library
  import:           common-options
  exposed-modules:
      Nummy.Prelude
    , Nummy.Parser
    , Nummy.Cache
    , Nummy.Metrology
    , Nummy.Metrology.Definitions
  other-modules:
      Nummy.Parser.Base
    , Nummy.Parser.Expr
    , Nummy.Parser.Unit
    , Nummy.Currency
    , Nummy.Currency.Base
    , Nummy.Currency.Request
    , Nummy.Metrology.Base
    , Nummy.Metrology.Currency
    , Nummy.Metrology.Dimension
    , Nummy.Metrology.Definitions.Dimension
    , Nummy.Metrology.Definitions.Unit
    , Nummy.Metrology.Definitions.Prefix
    , Nummy.Metrology.Quantity
    , Nummy.Metrology.Unit
    , Nummy.Metrology.Definitions.Tables
  hs-source-dirs:     lib
  build-depends:
    -- Base
      protolude
    -- Data
    , extra           == 1.7.4
    , text
    , scientific
    , containers
    , unordered-containers
    -- Trans
    , mtl
    , transformers
    -- Requests
    , req
    , cache
    , aeson
    -- Parsing
    , megaparsec
    , parser-combinators
    -- Util
    , clock
    , prettyprinter

executable nummy
  import:             common-options
  main-is:            Main.hs
  hs-source-dirs:     exe
  build-depends:
      hs-nummy
    , text
    , ansi-terminal
    , megaparsec
    , haskeline

test-suite tests
  import:             common-options
  main-is:            Main.hs
  other-modules:
      Tests.Parser
    , Tests.Definitions
    , Tests.Dimensions
    , Tests.Units
    , Tests.Quantities
    , Tests.Expressions
  hs-source-dirs:     test
  type:               exitcode-stdio-1.0
  build-depends:
      hs-nummy
    , text
    , megaparsec
    , tasty
    , tasty-hunit
    , tasty-expected-failure
    , prettyprinter
