cabal-version: 2.2
name:          hs-nummy
version:       0.6

common common-options
  default-language:   Haskell2010
  default-extensions:
      NoImplicitPrelude
    , OverloadedStrings
    , GeneralizedNewtypeDeriving
    , NumericUnderscores
    , RecordWildCards
  ghc-options:        -Wall
                      -Wno-type-defaults
                      -fwrite-ide-info
                      -hiedir=.hie
  build-depends:      base

common common-depends
  build-depends:
      protolude
    -- Data
    , extra
    , text
    , lens
    , containers
    , unordered-containers
    -- Trans
    , mtl
    , transformers
    -- Parsing
    , megaparsec
    -- Util
    , prettyprinter
    , prettyprinter-ansi-terminal

library
  import:           common-options, common-depends
  exposed-modules:
      Nummy.Prelude
    , Nummy.Base
    , Nummy.Cache
    , Nummy.Currency
    , Nummy.Parser
    , Nummy.Metrology
    , Nummy.Metrology.Definitions
  other-modules:
      Nummy.Parser.Base
    , Nummy.Parser.Unit
    , Nummy.Parser.Physical
    , Nummy.Parser.Command
    , Nummy.Metrology.Dimension
    , Nummy.Metrology.Definitions.Dimension
    , Nummy.Metrology.Definitions.Unit
    , Nummy.Metrology.Definitions.Prefix
    , Nummy.Metrology.Prefix
    , Nummy.Metrology.Quantity
    , Nummy.Metrology.Unit
    , Nummy.Metrology.Definitions.Tables
  hs-source-dirs:     lib
  build-depends:
    -- Requests
      req
    , cache
    , aeson
    -- Parsing
    , parser-combinators
    -- Util
    , clock

executable nummy
  import:             common-options, common-depends
  main-is:            Main.hs
  other-modules:
      Application.Repl
    , Application.Repl.Input
    , Application.Repl.Output
    , Application.Repl.Parser
    , Application.Repl.Commands
  hs-source-dirs:     exe
  build-depends:
      hs-nummy
    -- IO
    , async
    , pipes
    , pipes-concurrency
    , ansi-terminal

test-suite lib
  import:             common-options, common-depends
  main-is:            Main.hs
  other-modules:
      Tests.Parser
    , Tests.Definitions
    , Tests.Dimensions
    , Tests.Units
    , Tests.Quantities
    , Tests.Expressions
  hs-source-dirs:     test
  type:               exitcode-stdio-1.0
  build-depends:
      hs-nummy
    -- Testing
    , tasty
    , tasty-hunit
    , tasty-expected-failure
